force-app/main/default/objects/CustomerSlot__c/CustomerSlot__c.object-meta.xml
<CustomObject>
    <description>Object containing customer slots (booked, canceled or completed)</description>
    <label>Réservation client</label>
    <nameField>
        <displayFormat>BN{000000}</displayFormat>
        <label>Booking number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réservations client</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>