force-app/main/default/objects/CustomerSlot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store concerned by the customer slot</description>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer slots</relationshipLabel>
    <relationshipName>CustomerSlots</relationshipName>
    <type>Lookup</type>
</CustomField>