force-app/main/default/objects/CustomerSlot__c/fields/ActualNumberOfPersons__c.field-meta.xml
<CustomField>
    <fullName>ActualNumberOfPersons__c</fullName>
    <description>Real number of total physical persons entering to the store (set by the store security)</description>
    <label>Actual number of persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>