force-app/main/default/objects/CustomerSlot__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact (customer) concerned by the customer slot</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer slots</relationshipLabel>
    <relationshipName>CustomerSlots</relationshipName>
    <type>Lookup</type>
</CustomField>