force-app/main/default/objects/CustomerSlot__c/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <description>Email of the customer concerned by the customer slot</description>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer email</label>
    <type>Text</type>
</CustomField>