force-app/main/default/objects/CustomerSlot__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>Full name of the customer concerned by the customer slot</description>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer name</label>
    <type>Text</type>
</CustomField>