force-app/main/default/objects/CustomerSlot__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <description>Phone number of the customer concerned by the customer slot</description>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer phone</label>
    <type>Text</type>
</CustomField>