force-app/main/default/objects/CustomerSlot__c/fields/ExpectedStartDatetime__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStartDatetime__c</fullName>
    <description>expected arrival time based on currently booked slots</description>
    <label>Expected Start date/time</label>
    <type>DateTime</type>
</CustomField>