force-app/main/default/objects/CustomerSlot__c/fields/IsToday__c.field-meta.xml
<CustomField>
    <fullName>IsToday__c</fullName>
    <formula>DAY(TODAY()) = DAY(DATEVALUE(StartDatetime__c )) &amp;&amp;
MONTH(TODAY()) = MONTH(DATEVALUE(StartDatetime__c )) &amp;&amp;
YEAR(TODAY()) = YEAR(DATEVALUE(StartDatetime__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Today</label>
    <type>Checkbox</type>
</CustomField>