force-app/main/default/objects/CustomerSlot__c/fields/ProvidedEmail__c.field-meta.xml
<CustomField>
    <fullName>ProvidedEmail__c</fullName>
    <description>Email provided by customer (set in customer slot form)</description>
    <label>Provided Email</label>
    <type>Email</type>
</CustomField>