force-app/main/default/objects/CustomerSlot__c/fields/ProvidedFirstName__c.field-meta.xml
<CustomField>
    <fullName>ProvidedFirstName__c</fullName>
    <description>Provided first name of the customer (set in customer slot form)</description>
    <label>Provided First name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>