force-app/main/default/objects/CustomerSlot__c/fields/ProvidedLastName__c.field-meta.xml
<CustomField>
    <fullName>ProvidedLastName__c</fullName>
    <description>Provided last name of the customer (set in customer slot form)</description>
    <label>Provided Last name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>