force-app/main/default/objects/CustomerSlot__c/fields/ProvidedName__c.field-meta.xml
<CustomField>
    <fullName>ProvidedName__c</fullName>
    <formula>ProvidedFirstName__c &amp; &quot; &quot; &amp; ProvidedLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provided Name</label>
    <type>Text</type>
</CustomField>