force-app/main/default/objects/CustomerSlot__c/fields/ProvidedNumberOfPersons__c.field-meta.xml
<CustomField>
    <fullName>ProvidedNumberOfPersons__c</fullName>
    <description>Provided number of total physical persons coming to the store (set in customer slot form)</description>
    <label>Provided number of persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>