force-app/main/default/objects/CustomerSlot__c/fields/QRCode__c.field-meta.xml
<CustomField>
    <fullName>QRCode__c</fullName>
    <description>QR Code for customer slot</description>
    <formula>IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=200x200&amp;data=&apos; &amp; Id ,&apos;Customer Slot QR Code&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QRCode</label>
    <type>Text</type>
</CustomField>