force-app/main/default/objects/CustomerSlot__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <description>Parent slot concerned by this customer slot</description>
    <label>Slot</label>
    <referenceTo>Slot__c</referenceTo>
    <relationshipLabel>Customer slots</relationshipLabel>
    <relationshipName>CustomerSlots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>