force-app/main/default/objects/CustomerSlot__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <description>Starting date and time of the customer slot</description>
    <formula>Slot__r.StartDatetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting date/time</label>
    <type>DateTime</type>
</CustomField>