force-app/main/default/objects/CustomerSlot__c/fields/StatusIcon__c.field-meta.xml
<CustomField>
    <fullName>StatusIcon__c</fullName>
    <formula>CASE(  Status__c,
&quot;Booked&quot;,
   IF( IsToday__c ,
        &quot;/fatcow/farmfresh/32/accept.png&quot;,
        &quot;/fatcow/farmfresh/32/error.png&quot; ),
&quot;/fatcow/farmfresh/32/delete.png&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>