force-app/main/default/objects/CustomerSlot__c/fields/TECH_StoreId__c.field-meta.xml
<CustomField>
    <fullName>TECH_StoreId__c</fullName>
    <description>to denormalize Account Store Id</description>
    <externalId>true</externalId>
    <label>TECH_StoreId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>