force-app/main/default/objects/CustomerSlot__c/fields/TechnicalStartDatetime__c.field-meta.xml
<CustomField>
    <fullName>TechnicalStartDatetime__c</fullName>
    <description>copy from slot to filter in SOSL mode</description>
    <label>Technical Start DateTime</label>
    <type>DateTime</type>
</CustomField>