force-app/main/default/objects/CustomerSlot__c/validationRules/CantBookMoreThanAvailable.validationRule-meta.xml
<ValidationRule>
    <fullName>CantBookMoreThanAvailable</fullName>
    <active>true</active>
    <description>Check that the customer is not booking more place than available</description>
    <errorConditionFormula>ProvidedNumberOfPersons__c &gt; Slot__r.RemainingPositions__c</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas réserver plus de places, qu&apos;il ne reste de places</errorMessage>
</ValidationRule>