force-app/main/default/objects/CustomerSlot__c/listViews/AllCustomerSlots.listView-meta.xml
<ListView>
    <fullName>AllCustomerSlots</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Slot__c</columns>
    <columns>ProvidedEmail__c</columns>
    <columns>ProvidedName__c</columns>
    <columns>ProvidedNumberOfPersons__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les réservations</label>
</ListView>